# cs336

./: README.md
Note/: lec2_notes_zh.md  lec3_notes_zh.md  lec4_notes_zh.md
Note/a1_notes/: a1_phase1_bpe_algorithm.md  a1_phase2_transformer_architecture.md  a1_phase3_training_components.md  a1_phase4_interface_design.md  a1_phase5_basic_modules_guide.md  a1_phase6_model_assembly_guide.md  a1_phase7_training_infra_guide.md  a1_phase8_bpe_implementation_guide.md  a1_phase9_experiments_guide.md
a1/assignment1-basics/: .gitignore  BPE_TODO.md  TRAINING_INFRA_INTERFACE.md  analyze_bpe_experiments.py  cs336_spring2025_assignment1_basics_zh.md  prepare_bpe_dataset.py  pyproject.toml  run_bpe_experiment.py  run_required_bpe_experiments.py  scalene-profile.json  sitecustomize.py  train_bpe_demo.py  train_lm.py
a1/assignment1-basics/cs336_basics/: BPE_WALKTHROUGH.md  Function.py  bpe_experiments.py  model.py  tokenizer.py
a1/assignment1-basics/tests/: adapters.py  test_bpe_experiments.py
lecture/: lec2.py  pyproject.toml
