[project]
name = "cs336-lecture"
version = "0.1.0"
description = "CS336 lecture scripts"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "einx>=0.3.0",
    "jaxtyping>=0.3.0",
    "numpy",
    "psutil>=6.1.1",
    "pytest>=8.3.4",
    "regex>=2024.11.6",
    "submitit>=1.5.2",
    "tiktoken>=0.9.0",
    "torch~=2.6.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torch~=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
    "ty>=0.0.1a16",
]

[tool.uv]
package = false
python-preference = "managed"
